
2018-09-30  Simon Sobisch <simonsobisch@gnu.org>

	* fileio.c [HAVE_FCNTL]: minor code cleanup
	* common.c, common.h: new function cob_common_init to provide
	  C RTS and library setup, currently binding textdomain and
	  for [_WIN32] handling unix-lf
	* common.c, coblocal.h, cobgetopt.c: activated translated messages
	  for COBOL runtime
	* common.c, screenio.c: fixed to use constant strings for
	  static char * initialization, postpone msgid translation
	* common.c (print_runtime_conf, get_config_val, var_print):
	  adjusted output of cobcrun -runtime-conf (boolean print as yes/no now)

2018-09-22  Simon Sobisch <simonsobisch@gnu.org>

	* fileio.c [WITH_DB]: fix split key access by using the component data
	  even if there is only one

2018-09-01  Simon Sobisch <simonsobisch@gnu.org>

	* common.c (cob_gettmpdir): check if the specified temporary location
	  is actually an existing directory; otherwise warn and check the next
	  environment variable; added check_valid_env_tmpdir, check_valid_dir
	* common.c (output_source_location): removed extra space in warnings
	  if neither source-file nor source-line is set
	* common.c (cob_runtime_warning): allow warnings before call to
	  cob_init()
	* xml.c (set_xml_code): partially fix bug #548: don't try to set XML-CODE
	  if the module has no reference (and therefore no field) for it

2018-08-19  Simon Sobisch <simonsobisch@gnu.org>

	* xml.c [!WITH_XML2] (cob_is_valid_uri): added minimal implementation,
	  as this function is also used from within cobc
	* xml.c: explicit check for the non-standard header files instead of
	  the global WITH_XML definition
	* xml.c, common.h: fixed compiler warnings

2018-08-19  Edward Hart <edward.dan.hart@gmail.com>

	* xml.c: new file, added for XML GENERATE

2018-08-17  Simon Sobisch <simonsobisch@gnu.org>

	* coblocal.h, numeric.c (cob_decimal_init2): fixed compiler warning

2018-06-21  Brian Tiffin <btiffin@gnu.org>

	* common.h, intrinsic.c: CONTENTS-OF renamed to CONTENT-OF
